@@ -16,14 +16,22 @@ modules.  The <tt>LOGIN</tt> command is authenticated via the CVM named
 by <tt>$CVM_SASL_PLAIN</tt>.  If authentication succeeds, it sets up the
 environment and executes <tt>PROGRAM</tt>.  It also offers <a
 href="http://www.faqs.org/rfcs/rfc1734.html">RFC 1734</a> compliant AUTH
-support through <a href="cvm-sasl.html">cvm-sasl</a>. The environment is
-set up for use with Courier IMAP.</p>
+support through <a href="cvm-sasl.html">cvm-sasl</a>.</p>
 
 <p>Connections are timed out after <tt>$AUTH_TIMEOUT</tt> (or
 <tt>$TIMEOUT</tt> if that is not set) seconds of inactivity (defaults to
 1200 seconds or 20 minutes), or <tt>$AUTH_SESSION_TIMEOUT</tt> (or
 <tt>$SESSION_TIMEOUT</tt> if that is not set) seconds after the
 connection was established (defaults to 86400 seconds or 24 hours).</p>
+
+<p>By default, the environment for the executed <tt>PROGRAM</tt> is set
+up for use with Courier IMAP.  If <tt>$SETUP_ENV</tt> is set
+to <tt>dovecot</tt>, <tt>imapfront-auth</tt> will try to detect the type
+of mailbox in use and set <tt>$MAIL</tt> accordingly.  See the Dovecot
+documentation
+for <a href="http://wiki2.dovecot.org/MailLocation">version 2</a> and
+<a href="http://wiki1.dovecot.org/MailLocation">version 1</a> for more
+details.</p>
 
 </body>
 </html>
